# xsearch

./: .gitignore  README.md  _config.yml  pom.xml
clojure/: .gitignore
clojure/cljsearch/: .gitignore  README.md  cljsearch  project.clj
cpp/: Account.cpp  Account.h  SearchOption.cpp  SearchOption.h  SearchOptions.cpp  SearchOptions.h  SearchSettings.cpp  SearchSettings.h  cppsearch.cpp  main.cpp
cpp/cppsearch/: .gitignore  CMakeLists.txt  cppsearch.cpp  cppsearch.sh
cpp/cppsearch/include/: FileTypes.h  FileUtil.h  SearchConfig.h  SearchException.h  SearchFile.h  SearchFileResult.h  SearchOption.h  SearchOptions.h  SearchPattern.h  SearchResult.h  SearchResultFormatter.h  SearchResultSorter.h  SearchSettings.h  SearchTextResult.h  Searcher.h  StringUtil.h  color.h  common.h  config.h
cpp/cppsearch/src/: FileTypes.cpp  FileUtil.cpp  SearchConfig.cpp  SearchException.cpp  SearchFile.cpp  SearchFileResult.cpp  SearchOption.cpp  SearchOptions.cpp  SearchPattern.cpp  SearchResult.cpp  SearchResultFormatter.cpp  SearchResultSorter.cpp  SearchSettings.cpp  SearchTextResult.cpp  Searcher.cpp  StringUtil.cpp  common.cpp
cpp/cppsearch/tests/: FileTypesTest.cpp  FileUtilTest.cpp  SearchFileTest.cpp  SearchOptionsTest.cpp  SearchResultTest.cpp  SearchSettingsTest.cpp  SearcherTest.cpp  tests-main.cpp
csharp/: .gitignore
csharp/CsSearch/: Arguments.cs  CsSearch.csproj  CsSearch.sln  SearchArgumentException.cs  SearchSettings.cs  cssearch.bat  cssearch.sh
csharp/WpfSearch/: WpfSearch.sln
dart/dartsearch/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
elixir/exsearch/: .gitignore  README.md  mix.exs
fsharp/: .gitignore  FsSearch.sln  fssearch.bat  fssearch.sh
fsharp/FsSearch/: .gitignore  Arguments.fs  Common.fs  Config.fs  FileTypes.fs  FileUtil.fs  FsSearch.fsproj  FsSearch.sln  SearchFile.fs  SearchMain.fs  SearchOption.fs  SearchOptions.fs  SearchResult.fs  SearchSettings.fs  Searcher.fs  Utils.fs  fssearch.bat  fssearch.sh
go/: .gitignore
go/gosearch/: go.mod  go.sum
haskell/: .gitignore  hssearch.bat
haskell/hssearch/: ChangeLog.md  LICENSE  Main.hs  Makefile  README.md  hssearch.cabal  package.yaml  stack.yaml
java/: .gitignore  build.xml  javasearch  pom.xml
java/javasearch/: .gitignore  .project  google_checks.xml  javasearch  pom.xml  settings.gradle.kts
java/tools/: sun_checks.xml
javascript/jssearch/: .eslintrc.js  .gitignore  babel.config.json  gulpfile.js  jest.config.js  package.json
kotlin/ktsearch/: .gitignore  LICENSE  build.gradle  build.gradle.kts  ktsearch  settings.gradle.kts
node/: fileutil.js  nodesearch.bat  nodesearch.js  nodesearch.sh  searcher.js  searchoption.js  searchoptions.js  searchresult.js  searchsettings.js
node/jssearch/: gulpfile.js  package.json
node/nodesearch/: common.js  config.js  filetype.js  filetypes.js  fileutil.js  nodesearch.js  package.json  searcher.js  searchfile.js  searchoption.js  searchoptions.js  searchresult.js  searchsettings.js
node/tests/: fileutil_test.js  searcher_test.js  searchoptions_test.js  searchresult_test.js  searchsettings_test.js
objc/objcsearch/: Package.swift  README.md  objcsearch.sh
ocaml/mlsearch/: .gitignore  build.sh  unittest.sh
perl/: plsearch.bat
perl/plsearch/: Changes  FileType.pm  FileTypes.pm  FileUtil.pm  MANIFEST  META.json  Makefile.PL  README  SearchFile.pm  SearchOption.pm  SearchOptions.pm  SearchResult.pm  SearchSettings.pm  Searcher.pm  common.pm  config.pm  plsearch.pl
perl/tests/: filetypes_test.pl  fileutil_test.pl  searcher_test.pl  searchoptions_test.pl  searchresult_test.pl  searchsettings_test.pl
php/phpsearch/: .gitignore  README.md  autoload.php  color.php  common.php  composer.json  config.php  filetype.php  filetypes.php  fileutil.php  phpsearch.php  searcher.php  searchexception.php  searchfile.php  searchoption.php  searchoptions.php  searchresult.php  searchresultformatter.php  searchsettings.php
python/: .gitignore  fileutil.py  pysearch.bat  pysearch.py  searcher.py  searchoption.py  searchoptions.py  searchresult.py  searchsettings.py
python/pysearch/: .gitignore  MANIFEST.in  __init__.py  __main__.py  common.py  config.py  filetypes.py  fileutil.py  pyproject.toml  pysearch.bat  pysearch.py  requirements.txt  searcher.py  searchexception.py  searchfile.py  searchoption.py  searchoptions.py  searchresult.py  searchsettings.py  setup.py
python/pysearch/data/: searchoptions.json
python/pysearch/pysearch/: __init__.py  __main__.py  color.py  common.py  config.py  filetypes.py  fileutil.py  pysearch.py  searcher.py  searchexception.py  searchfile.py  searchoption.py  searchoptions.py  searchresult.py  searchsettings.py
python/pysearch/tests/: filetypes_test.py  fileutil_test.py  searcher_test.py  searchfile_test.py  searchoptions_test.py  searchresult_test.py  searchsettings_test.py
ruby/: fileutil.rb  rbsearch.bat  rbsearch.rb  searcher.rb  searchoption.rb  searchoptions.rb  searchresult.rb  searchsettings.rb
ruby/rbsearch/: Gemfile  (+18 more)
rust/: .gitignore
rust/rssearch/: Cargo.toml  rssearch.sh
rust/rssearch/src/: color.rs  common.rs  config.rs  filetypes.rs  fileutil.rs  main.rs  searcher.rs  searcherror.rs  searchfile.rs  searchoptions.rs  searchresult.rs  searchresultformatter.rs  searchresultsorter.rs  searchsettings.rs
scala/: .gitignore  SearchOptions.scala  SearchSettings.scala  Searcher.scala  pom.xml  scalasearch  scalasearch.scala
scripts/: .gitignore  benchmark.py  benchmark_results_2015-05-27.01.txt  benchmark_results_2015-05-27.02.txt  benchmark_results_2015-05-27.03.txt  build.ps1  build.sh  clean.ps1  clean.sh  color.sh  colorize_scenarios.json  common.ps1  common.sh  compare.py  config.ps1  config.sh  lint.sh  maxlinelength_scenarios.json  printmatches_scenarios.json  pyvenv_setup.sh  scenarios.json  settingsfile_scenarios.json  stats.sh  test.sh  unittest.ps1  unittest.sh  xsearch.py
shared/: alphabet.txt  benchmark.py  build.sh  filetypes.json  filetypes.xml  lint.sh  searchoptions.json  searchoptions.xml  settings.json  test.sh  unittest.sh  xsearch.py
temp/: CsSearch.sln
(+786 files in other folders)
