[package]
name = "rssearch"
version = "0.1.0"
authors = ["Cary Clark <clarkcb@gmail.com>"]
edition = "2024"

[dependencies]
encoding = "0.2.33"
regex = "1.12.2"
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
#time = "0.3.41"
#zip = "2.5.0"
# this assumes that xfind is cloned next to xsearch
rsfind = {path = "../../../xfind/rust/rsfind", version = "0.1.0" }
